--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -8,4 +8,4 @@ jobs:
         uses: actions/checkout@v5
 
       - name: Run script
-        uses: echo "Hello, World!"
+        run: echo "Hello, World!"
